--- a/Vinylsg12/app/src/main/res/layout/activity_band.xml
+++ b/Vinylsg12/app/src/main/res/layout/activity_band.xml
@@ -79,13 +79,50 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/averia_libre"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:text="TextView"
+                        android:text="Musicians"
                         android:textSize="14sp"
                         android:textStyle="italic"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/musicians_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:fontFamily="@font/averia_libre"
+                            android:layout_marginStart="16dp"
+                            android:gravity="center"
+                            android:text="Musicians"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <Space
+                            android:layout_width="0dp"
+                            android:layout_height="48dp"
+                            android:layout_weight="1" />
+
+                        <ImageButton
+                            android:id="@+id/addMusicianButton"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginEnd="16dp"
+                            app:srcCompat="@drawable/ic_add_circle" />
+
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/musicians_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
                 </LinearLayout>
 
             </LinearLayout>
