feat: Add prizes list activity to drawerView

--- a/Vinylsg12/app/src/main/res/menu/main_menu.xml
+++ b/Vinylsg12/app/src/main/res/menu/main_menu.xml
@@ -11,6 +11,10 @@
         android:title="Create album"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_prizes"
+        android:title="Prizes"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_about_us"
         android:title="About us"
         app:showAsAction="never" />
